<resources>
    <string name="app_name">QRPC</string>

    <string name="error_missing_permissions">Cannot start without required permissions</string>

    <string name="codename">Your codename: %s</string>
    <string name="opponent_name">Opponent: %s</string>
    <string name="no_opponent">none (yet)</string>

    <string name="status_disconnected">Disconnected</string>
    <string name="status_searching">Searching</string>
    <string name="status_connected">Connected</string>

    <string name="game_choice">You chose %s</string>

    <string name="win_message">%1$s beats %2$s!</string>
    <string name="tie_message">You both chose %s</string>
    <string name="loss_message">%1$s loses to %2$s…</string>

    <string name="action_connect">Activar</string>
    <string name="action_disconnect">Desactivar</string>
    <string name="action_searching">Searching</string>

    <string name="choice_rock">Rock</string>
    <string name="choice_paper">Paper</string>
    <string name="choice_scissors">Scissors</string>

    <string name="game_score">%1$d : %2$d</string>
    <string name="scrollview_name">ScrollView</string>
    <string name="button_ok">Vale</string>
</resources>